--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 			</div>
 		</div>
 		<div class="section">
-			<div class="view2-2Mobile">
+			<div class="view22Mobile">
 			  	<div class="Chemicalpro-Mobile" >
 					<t>化學特性</t>
 			  	</div>
@@ -234,7 +234,7 @@
 			</div>
 		</div>
 		<div class="section">
-			<div class="view2-3Mobile">
+			<div class="view23Mobile">
 				<div class="Proportion-Mobile" >
 					<t>0.04%</t>			
 			  	</div>
@@ -480,7 +480,7 @@
 			<div class="bg2">
 				<img src="webpng/page2bg.png"  width="100%" alt=""/> 
 			</div>
-			<div class="bg2-2Moblie">
+			<div class="bg22Moblie">
 				<img src="webpng/page2-2bg.png" width="100%" alt=""/> 
 			</div>
 			<div class="bg3">
