--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
 			<div class="bg2">
 				<img src="webpng/page2bg.png"  width="100%" alt=""/> 
 			</div>
-			<div class="bg22Moblie">
+			<div class="bg2-2Moblie">
 				<img src="webpng/page2-2bg.png" width="100%" alt=""/> 
 			</div>
 			<div class="bg3">
