--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
 				<div class="subtitle4 Mobile">
 					<t>在環境中扮演的角色</t>
 				</div>
-				<div  class="gas-Mobile" value = "close" data-aos="slide-up">
+				<div  class="gas Mobile" value = "close" data-aos="slide-up">
 				  <t>溫室氣體</t>
 					
 					<div class="textcardgas Mobile">
