--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
 				  <t>溫室氣體</t>
 					
 					<div class="textcardgas">
-						<div class="card" id="gascard" onclick="flip(event)">
+						<div class="card" id="gascardPC" onclick="flip(event)">
 							<div class="gasfront">
 								<div class="gasfimg">
 									<img src="Animation/Piechart.gif" width="100%"  alt=""/> 
@@ -468,7 +468,7 @@
 				  <t>溫室氣體</t>
 					
 					<div class="textcardgas Mobile">
-						<div class="card" id="gascardpc"  onclick="flip(event)">
+						<div class="card" id="gascardMobile"  onclick="flip(event)">
 							<div class="gasfront Mobile">
 								<div class="gasfimg Mobile">
 									<img src="Animation/Piechart.gif" width="100%"  alt=""/> 
