--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
 			<div class="view4-1Mobile">
 				
 				
-				<div class="subtitle4 Mobile">
+				<div class="subtitle4-Mobile">
 					<t>在環境中扮演的角色</t>
 				</div>
 				<div  class="gas Mobile" value = "close" data-aos="slide-up">
