--- a/index.html
+++ b/index.html
@@ -464,17 +464,17 @@
 				<div class="subtitle4-Mobile">
 					<t>在環境中扮演的角色</t>
 				</div>
-				<div  class="gas Mobile" value = "close" data-aos="slide-up">
+				<div  class="gas-Mobile" value = "close" data-aos="slide-up">
 				  <t>溫室氣體</t>
 					
-					<div class="textcardgas Mobile">
+					<div class="textcardgas-Mobile">
 						<div class="card" id="gascardMobile"  onclick="flip(event)">
-							<div class="gasfront Mobile">
-								<div class="gasfimg Mobile">
+							<div class="gasfront-Mobile">
+								<div class="gasfimg-Mobile">
 									<img src="Animation/Piechart.gif" width="100%"  alt=""/> 
 								</div>
 							</div>
-							<div class="gasback Mobile">
+							<div class="gasback-Mobile">
 								
 								<h2>人為排放量最多的溫室氣體</h2>
 								<div class="gascontent Mobile">
