--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
 							<div class="gasback-Mobile">
 								
 								<h2>人為排放量最多的溫室氣體</h2>
-								<div class="gascontent Mobile">
+								<div class="gascontent-Mobile">
 									<h2>約佔所有溫室氣體<br>總貢獻的65%,</h2>
 								</div>						
 								<h2 align="center">故大多數的學者<br>
