--- a/index.html
+++ b/index.html
@@ -612,7 +612,10 @@
 			<div class="bg4">
 				<img src="webpng/page4bg.png" width="100%" alt=""/>
 			</div>
-			<div class="bg4-1Mobile">
+			<div class="bg4-1-1Mobile">
+				<img src="webpng/page2-4bg.png" width="100%" alt=""/> 
+			</div>
+			<div class="bg4-1-2Mobile">
 				<img src="webpng/page2-4bg.png" width="100%" alt=""/> 
 			</div>
 			<div class="bg5"></div>
