--- a/index.html
+++ b/index.html
@@ -691,6 +691,12 @@
 			<div class="bg4-2-2Mobile">
 				<img src="webpng/page2-4bg.png" width="100%" alt=""/> 
 			</div>
+			<div class="bg4-3-1Mobile">
+				<img src="webpng/page2-4bg.png" width="100%" alt=""/> 
+			</div>
+			<div class="bg4-3-2Mobile">
+				<img src="webpng/page2-4bg.png" width="100%" alt=""/> 
+			</div>
 			<div class="bg5"></div>
 			<div class="bg5-Mobile"></div>
 
