--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
 				<div  class="oil" value = "close"  data-aos="slide-up" >
 					<t>化石燃料</t>
 					<div class="textcardoil">
-						<div class="oilcard" id="oilcardPC" onclick="flip(event)">
+						<div class="card" id="oilcardPC" onclick="flip(event)">
 							<div class="oilfront">
 								<div class="oilfimg">
 									<img src="webpng/Cardoil.png" width="85%" height="77%" alt=""/>
