--- a/index.html
+++ b/index.html
@@ -689,41 +689,46 @@
 				<img src="webpng/page2bg.png"  width="100%" alt=""/> 
 			</div>
 			<div class="bg2-2Moblie">
-				<img src="webpng/page2-2bg.png" width="100%" alt=""/> 
+				<img src="webpng/page2-5bg.png" width="100%" alt=""/> 
 			</div>
 			<div class="bg3">
 				<img src="webpng/page3bg.png" width="100%" alt=""/> 
 			</div>
 			<div class="bg3-1Moblie">
-				<img src="webpng/page2-3bg.png" width="100%" alt=""/> 
+				<img src="webpng/page2-5bg.png" width="100%" alt=""/> 
 			</div>
 			<div class="bg3-2Moblie">
-				<img src="webpng/page2-4bg.png" width="100%" alt=""/> 
+				<img src="webpng/page2-5bg.png" width="100%" alt=""/> 
 			</div>
 			<div class="bg3-3Moblie">
-				<img src="webpng/page2-4bg.png" width="100%" alt=""/> 
+				<img src="webpng/page2-5bg.png" width="100%" alt=""/> 
 			</div>
 			<div class="bg4">
 				<img src="webpng/page4bg.png" width="100%" alt=""/>
 			</div>
 			<div class="bg4-1-1Mobile">
-				<img src="webpng/page2-4bg.png" width="100%" alt=""/> 
+				<img src="webpng/page2-5bg.png" width="100%" alt=""/> 
 			</div>
 			<div class="bg4-1-2Mobile">
-				<img src="webpng/page2-4bg.png" width="100%" alt=""/> 
+				<img src="webpng/page2-5bg.png" width="100%" alt=""/> 
 			</div>
 			<div class="bg4-2-1Mobile">
-				<img src="webpng/page2-4bg.png" width="100%" alt=""/> 
+				<img src="webpng/page2-5bg.png" width="100%" alt=""/> 
 			</div>
 			<div class="bg4-2-2Mobile">
-				<img src="webpng/page2-4bg.png" width="100%" alt=""/> 
+				<img src="webpng/page2-5bg.png" width="100%" alt=""/> 
 			</div>
 			<div class="bg4-3-1Mobile">
-				<img src="webpng/page2-4bg.png" width="100%" alt=""/> 
+				<img src="webpng/page2-5bg.png" width="100%" alt=""/> 
 			</div>
 			<div class="bg4-3-2Mobile">
-				<img src="webpng/page2-4bg.png" width="100%" alt=""/> 
+				<img src="webpng/page2-5bg.png" width="100%" alt=""/> 
 			</div>
+			<div class="bg4-4-1Mobile">
+				<img src="webpng/page2-5bg.png" width="100%" alt=""/> 
+			</div>
+			<div class="bg4-4-2Mobile">
+				<img src="webpng/page4bg.png" width="100%" alt=""/>
 			<div class="bg5"></div>
 			<div class="bg5-Mobile"></div>
 
