--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
 				<div  class="life" value = "close" data-aos="slide-up" >
 					<t>生活應用</t>
 					<div class="textcardlife">
-						<div class="lifecard" onclick="flip(event)">
+						<div class="card"  id="lifecardPC" onclick="flip(event)">
 							<div class="lifefront">
 								<div class="lifefimg">
 									<img src="webpng/LifeCard.png" width="100%"  alt=""/>
@@ -567,7 +567,7 @@
 						<div class="card"  id="lifecardMobile" onclick="flip(event)">
 							<div class="lifefront-Mobile">
 								<div class="lifefimg-Mobile">
-									<img src="webpng/Cardlife.png" width="90%" height="90%" alt=""/> 
+									<img src="webpng/LifeCard.png" width="90%" height="90%" alt=""/> 
 								</div>
 								
 							</div>
@@ -729,6 +729,7 @@
 			</div>
 			<div class="bg4-4-2Mobile">
 				<img src="webpng/page4bg.png" width="100%" alt=""/>
+			</div>
 			<div class="bg5"></div>
 			<div class="bg5-Mobile"></div>
 
