--- a/index.html
+++ b/index.html
@@ -561,19 +561,19 @@
 		<div class="section">
 			<div class="view4-4Mobile">
 				
-				<div class="grassleft">
+				<div class="grassleft-Mobile">
 					<img src="Animation/Left.gif" width="100%"  alt=""/> 
 				</div>
-				<div class="grasscenterleft">
+				<div class="grasscenterleft-Mobile">
 					<img src="Animation/grass-centerLeft.gif" width="100%" alt=""/> 
 				</div>
-				<div class="grasscenter">
+				<div class="grasscenter-Mobile">
 					<img src="Animation/grass-center.gif" width="100%"  alt=""/> 
 				</div>
-				<div class="grasscenterrigt">
+				<div class="grasscenterrigt-Mobile">
 					<img src="Animation/grass-centerRight.gif" width="100%"  alt=""/> 
 				</div>
-				<div class="grassright">
+				<div class="grassright-Mobile">
 					<img src="Animation/Right.gif" width="100%"  alt=""/> 
 				</div>								
 				<div  class="life-Mobile" value = "close" data-aos="slide-up" >
@@ -598,10 +598,10 @@
 					</div>
 
 				</div>
-				<div class="bottom">
+				<div class="bottom-Mobile">
 					<img src="webpng/bottom.png" width="100%"  alt=""/>
 				</div>
-				<div class="bubble">
+				<div class="bubble-Mobile">
 					<img src="Animation/bubble.gif" width="100%"  alt=""/> 
 				</div>
 
