--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@
 					<img src="Animation/Right.gif" width="100%"  alt=""/> 
 				</div>								
 				<div  class="life-Mobile" value = "close" data-aos="slide-up" >
-					<t>化石燃料</t>
+					<t>生活應用</t>
 					<div class="textcardlife-Mobile">
 						<div class="card"  id="lifecardMobile" onclick="flip(event)">
 							<div class="lifefront-Mobile">
