--- a/index.html
+++ b/index.html
@@ -246,10 +246,10 @@
 				    	<img src="Animation/Piechart004.gif" width="100%" alt=""/> 
 					</div>
 					<h3>&nbsp;</h3>
-					<h3>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;一般在空氣中二氧化碳的比例大約佔0.04%</h3>
-					<h3>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;根據季節的不同會有些微的上升與下降</h3>
-					<h3>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;近年來隨著人為排放量的增加</h3>
-					<h3>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;空氣中的二氧化碳含量有逐漸上升的趨勢</h3>
+					<h3>一般在空氣中二氧化碳的比例大約佔0.04%</h3>
+					<h3>根據季節的不同會有些微的上升與下降</h3>
+					<h3>近年來隨著人為排放量的增加</h3>
+					<h3>空氣中的二氧化碳含量有逐漸上升的趨勢</h3>
 				</div>
 				
 				<div class="Proportioncoverline-Mobile"></div>
