--- a/index.html
+++ b/index.html
@@ -588,10 +588,16 @@
 							</div>
 							<div class="lifeback-Mobile">
 															
-								<h2 align="center">生物屍體經萬年泥土<br>或水的壓力<br>&amp;</h2>
+								<h2>二氧化碳也常被應用在<br>生活周遭</h2>
 								<div class="lifecontent-Mobile">
-									<h2 align="center">地下高溫而生成化石燃料<br>存起大量的碳</h2>
+									<h2>如：</h2>
 								</div>
+								<h2 align="center">製作碳酸飲料、釀酒、<br>
+									製造舞台效果、滅火器、<br>
+									雷射、控制pH值、<br>
+									製鹼製糖工業、發泡劑、<br>
+									殺菌滅菌</h2>
+							
 
 							</div>
 						</div>
