--- a/index.html
+++ b/index.html
@@ -651,23 +651,23 @@
 		<div class="section">
 			<div class="view5-Mobile">
 				
-				<div class="references">
+				<div class="references-Mobile">
 					<t>參考資料</t>
 				</div>
 				<div class="rectangle">
-					<div class="CO2pro">
+					<div class="CO2pro-Mobile">
 						<t>二氧化碳的特性</t>
-						<div class="inforfrom">
+						<div class="inforfrom-Mobile">
 							<a href="https://zh.wikipedia.org/wiki/%E4%BA%8C%E6%B0%A7%E5%8C%96%E7%A2%B3" target="_blank" style="text-decoration:none; color:#FFFFFF;" title="維基百科">維基百科</a>	
 						</div>
 					</div>
-					<div class="CO2cause">
+					<div class="CO2cause-Mobile">
 						<t>二氧化碳的成因</t>
-						<div class="inforfrom">
+						<div class="inforfrom-Mobile">
 							<a href="https://zh.wikipedia.org/wiki/二氧化碳" target="_blank" style="text-decoration:none; color:#FFFFFF;" title="維基百科">維基百科</a>	
 						</div>
 					</div>
-					<div class="CO2role">
+					<div class="CO2role-Mobile">
 						<t>二氧化碳在環境中扮演的角色</t>
 						<div class="inforfrom">
 							<a href="https://scitechvista.nat.gov.tw/c/sgZw.htm" target="_blank" style="text-decoration:none; color:#FFFFFF;"  title="暖化的科學(3):二氧化碳與暖化">暖化的科學(3)：二氧化碳與暖化</a><p></p>
