--- a/網頁/AttackPage/AttackPage.html
+++ b/網頁/AttackPage/AttackPage.html
@@ -118,7 +118,7 @@
 			  <div class="Machine">
 					<img src="../../webpng/Attackpage/Machine.png" width="100%"  alt=""/> 
 				</div>
-			  <a href="Menu" class="Boxoutside" id="outside">
+			  <a href="#Menu" class="Boxoutside" id="outside">
 				  		  
 					<img src="../../webpng/Attackpage/Box.png" width="100%"  alt=""/> 
 					<div class="Outsidetitle">
