--- a/網頁/AttackPage/AttackPage.html
+++ b/網頁/AttackPage/AttackPage.html
@@ -272,7 +272,7 @@
 					</div>
 				<div class="indoor-Mobile" >
 					<h1>室內</h1>
-					<div class="indoorline"></div>
+					<div class="indoorline-Mobile"></div>
 				  	<div class="indoorpra-Mobile">
 						<p>室內空氣二氧化碳濃度<br>在350~450ppm之間，<br>同一般室外環境無異</p>
 					</div>
