--- a/網頁/AttackPage/AttackPage.html
+++ b/網頁/AttackPage/AttackPage.html
@@ -250,10 +250,14 @@
 						<div class="AfterLongtime">
 							<p>處於二氧化碳過高的環境</p>
 						</div>
-						<p>會使血液中的碳濃度增大，酸性增強，並產生酸中毒
-						<br>夏天常開空調，室內沒有新鮮空氣，二氧化碳的濃度不斷上升。
-						<br>使室內一直處於缺氧狀態，時間長了對身體有很大的危害。
-						<br>小孩和孕婦由於長期待在室內，所以是最容易受到二氧化碳的危害。
+						<p>會使血液中的碳濃度增大，
+						<br>酸性增強，並產生酸中毒
+						<br>夏天常開空調，室內沒有新鮮空氣，
+						<br>二氧化碳的濃度不斷上升。
+						<br>使室內一直處於缺氧狀態，
+						<br>時間長了對身體有很大的危害。
+						<br>小孩和孕婦由於長期待在室內，
+						<br>所以是最容易受到二氧化碳的危害。
 						</p>					
 					</div>	
 					
