--- a/網頁/AttackPage/AttackPage.html
+++ b/網頁/AttackPage/AttackPage.html
@@ -1173,8 +1173,8 @@
 			<div class="bg3">
 				<img src="../../webpng/Attackpage/Part3BG.png" width="100%"  alt=""/> 
 			</div>
-			<div class="bg3">
-				<img src="../../webpng/Attackpage/Part3BG.png" width="100%"  alt=""/> 
+			<div class="bg3-1Mobile">
+				<img src="../../webpng/Attackpage/Part3-1BG.png" width="100%"  alt=""/> 
 			</div>
 			<div class="bg4">
 				<img src="../../webpng/Attackpage/Part4BG.png" width="100%" alt=""/> 
