--- a/網頁/AttackPage/AttackPage.html
+++ b/網頁/AttackPage/AttackPage.html
@@ -13,6 +13,7 @@
 	<link href="AtackPagePart5.css" rel="stylesheet" type="text/css">
 	<link href="aos.css" rel="stylesheet" type="text/css">
 	<script src="jquery-1.8.3.min.js"></script>
+	<link rel="Off-Carbon icon" href="../../favicon.ico" type="image/x-icon">
 
 
 	
