--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
 				<div  class="gas" value = "close" data-aos="slide-up">
 				  <t>溫室氣體</t>
 					
-					<div class="textcardgas">
+					<div class="textcardgas" style="cursor:hand">
 						<div class="card" id="gascardPC" onclick="flip(event)">
 							<div class="gasfront">
 								<div class="gasfimg">
@@ -381,7 +381,7 @@
 
 				<div  class="sun" value = "close" data-aos="slide-up" >
 					<t>光合作用</t>
-					<div class="textcardsun">
+					<div class="textcardsun" style="cursor:hand">
 						<div class="card" id="suncardPC" onclick="flip(event)">
 							<div class="sunfront">
 								<div class="sunfimg">
@@ -405,7 +405,7 @@
 				</div>
 				<div  class="oil" value = "close"  data-aos="slide-up" >
 					<t>化石燃料</t>
-					<div class="textcardoil">
+					<div class="textcardoil" style="cursor:hand">
 						<div class="card" id="oilcardPC" onclick="flip(event)">
 							<div class="oilfront">
 								<div class="oilfimg">
@@ -426,7 +426,7 @@
 
 				<div  class="life" value = "close" data-aos="slide-up" >
 					<t>生活應用</t>
-					<div class="textcardlife">
+					<div class="textcardlife" style="cursor:hand">
 						<div class="card"  id="lifecardPC" onclick="flip(event)">
 							<div class="lifefront">
 								<div class="lifefimg">
