--- a/網頁/AttackPage/AttackPage.html
+++ b/網頁/AttackPage/AttackPage.html
@@ -382,11 +382,11 @@
 					<h1>工業革命至今帶來的災難</h1>
 				</div>
 				<div class="MainMenu" >
-					<div class="Backbutton">
+					<div class="Backbutton" style="cursor:hand">
 				    	<img src="../../webpng/Attackpage/Backbutton.png" width="100%"  alt=""/> 
 					</div>
 					
-					<div class="Menu" data-aos="slide-right" data-aos-duration="500" id="Menu" >
+					<div class="Menu" data-aos="slide-right" data-aos-duration="500" id="Menu"  style="cursor:hand">
 						<button class="SpeciesDiversity" value="close" >
 							<span class="ButtonTitle">
 								<h1>物種多樣性減少</h1>
