--- a/網頁/AttackPage/AttackPage.html
+++ b/網頁/AttackPage/AttackPage.html
@@ -624,7 +624,7 @@
 									<p>自 2018 年底起至 2019 年， <br>全球副熱帶地區可以說隨時都在燃燒，<br>從北半球步入春夏之際，溫帶地區的歐洲、日本、北美洲，<br>甚至西伯利東北（俄羅斯西伯利亞針葉林）都出現野火。<br>北半球仲夏，<br>全世界除了沒有植被的沙漠地區和我們的寶島台灣，<br>可以說是都深陷火海，<br>調查顯示，美國森林大火燃燒面積自1980年開始有漸增的現象，<br>2017與2018年更有驚人成長。<br>其中非洲草原北部因為迎來雨季而火勢稍緩。</p>	
 								</div>
 								
-								<div class="FFCSBLContenttext" data-aos="fade right">
+								<div class="FFCSBLContenttext" >
 
 									<p>北極圈山火頻發是十分罕見的現象，<br>但世界氣象組織(WNO)的統計顯示，<br>西伯利亞等北極圈地帶，<br>在2019年6月之後發生了超過100起大規模山火。<br>而西伯利亞的6月平均氣溫更比往年平均值高出約<font color="#ffa642">10度</font>。</p>	
 								</div>
