--- a/網頁/AttackPage/AttackPage.html
+++ b/網頁/AttackPage/AttackPage.html
@@ -630,7 +630,7 @@
 								<div class="FFCSBLContenttext" >
 									<p>北極圈山火頻發是十分罕見的現象，<br>但世界氣象組織(WNO)的統計顯示，<br>西伯利亞等北極圈地帶，<br>在2019年6月之後發生了超過100起大規模山火。<br>而西伯利亞的6月平均氣溫更比往年平均值高出約<font color="#ffa642">10度</font>。</p>	
 								</div>
-								<div class="FFCAusContenttext" data-aos="fade right">
+								<div class="FFCAusContenttext" >
 									<p>澳洲當地的消防員也表示叢林野火（bushfires）<br>發生的頻率愈來愈高。<br>根據研究顯示，許多發生野火的地區1月至8月的降雨量，<br>低於平均水平的50%，<br>部分地區更是遇上有史以來最乾旱的八個月，<br>使土壤、草、植物都極為乾燥，為今年火季提供了充分「燃料」。</p>	
 								</div>
 							</div>
@@ -639,7 +639,7 @@
 						    	<img src="../../webpng/Attackpage/FFCICON.png" width="100%"  alt=""/> 
 							</div>
 							<div class="FFCIconContent">
-								<div class="FFCIconContenttext" data-aos="fade right">
+								<div class="FFCIconContenttext" >
 									<p>然而新研究顯示，全球氣溫升高可能會阻礙這種自然循環，<br>進而導致野火肆虐的森林地區遭到長期性的破壞。<br>比較早年和近年火災地點的生長情況後，<br>團隊發現火災後沒有幼苗再生的比例從19％增加到32％。<br>科學家在論文中寫道：「與20世紀末的野火相比，<br>21世紀的野火後樹木再生情況大幅減少。」<br>而「生長於氣候耐受性邊緣的乾燥森林最有可能<br>在野火之後變成非森林。」</p>	
 								</div>
 							</div>
