--- a/網頁/AttackPage/AttackPage.html
+++ b/網頁/AttackPage/AttackPage.html
@@ -630,7 +630,7 @@
 								<div class="FFCSBLContenttext" >
 									<p>北極圈山火頻發是十分罕見的現象，<br>但世界氣象組織(WNO)的統計顯示，<br>西伯利亞等北極圈地帶，<br>在2019年6月之後發生了超過100起大規模山火。<br>而西伯利亞的6月平均氣溫更比往年平均值高出約<font color="#ffa642">10度</font>。</p>	
 								</div>
-								<div class="FFCAusContenttext" >
+								<div class="FFCAUSContenttext" >
 									<p>澳洲當地的消防員也表示叢林野火（bushfires）<br>發生的頻率愈來愈高。<br>根據研究顯示，許多發生野火的地區1月至8月的降雨量，<br>低於平均水平的50%，<br>部分地區更是遇上有史以來最乾旱的八個月，<br>使土壤、草、植物都極為乾燥，為今年火季提供了充分「燃料」。</p>	
 								</div>
 							</div>
