--- a/網頁/AttackPage/AttackPage.html
+++ b/網頁/AttackPage/AttackPage.html
@@ -614,7 +614,7 @@
 							<div class="FFCSBL">
 							    <img src="../../webpng/Attackpage/Silberia.png" width="100%"  alt=""/> 
 							</div>
-							<div class="FFCAus">
+							<div class="FFCAUS">
 						    	<img src="../../webpng/Attackpage/Australia.png" width="100%" alt=""/> 
 							</div>
 							<div class="FFCContenttext">
