--- a/網頁/AttackPage/AttackPage.html
+++ b/網頁/AttackPage/AttackPage.html
@@ -674,7 +674,7 @@
 						    	<img src="../../webpng/Attackpage/FRSPGRIT.png" width="100%" alt=""/> 
 							</div>
 							<div class="HWCpart1Content">
-								<div class="HWCpart1Contenttext" data-aos="fade right">
+								<div class="HWCpart1Contenttext" >
 									<p>歐洲往常夏季高溫大多出現在8月，2019年熱浪來得偏早。<br>在六月底歐洲部分國家迎來今2019年第一波熱浪，<br>其中衝擊最大的國家為：法國、西班牙、德國和義大利等國，<br>約有<font color="#ffa642">3.2億人</font>深受於高溫之中，<br>也在西班牙引發森林野火危害。<br>而在法國南部甚至出現破歷史紀錄的高溫──<font color="#ffa642">攝氏45.9度</font>，<br>1500人死亡。死亡人數比年平均值多出逾1000人。<br>七月熱浪緊追六月高溫，<br>法國氣象局（Météo-France）測得法國首都巴黎42.6°C高溫，<br>刷新巴黎1947年以來70餘年紀錄。</p>	
 								</div>
 							</div>
@@ -683,7 +683,7 @@
 						    	<img src="../../webpng/Attackpage/ENNL.png" width="100%"  alt=""/> 
 							</div>
 							<div class="HWCpart2Content">
-								<div class="HWCpart2Contenttext" data-aos="fade right">
+								<div class="HWCpart2Contenttext" >
 									<p>荷蘭氣象局（Royal Netherlands Meteorological Institute, KNMI）<br>表示：荷蘭南部測得40.7°C，打破過去75年來紀錄。<br>歐洲出現鐵軌承受不住高溫，發生鐵軌膨脹、彎曲的情況。<br>考量到出軌的風險，部分歐洲國家取消了火車班次，<br>運營英國鐵路基礎設施的Network Rail表示，<br>倫敦及其周邊地區的軌道溫度將超過50攝氏度，<br>是英國夏季鐵路平均溫度的兩倍。<br>連接巴黎和倫敦的<br>大力士高速列車（Thalys）和歐洲之星（Eurostar）火車，<br>也曾因為高空電纜過熱而遭到中斷，產生故障。</p>	
 								</div>
 							</div>
@@ -694,7 +694,7 @@
 								</div>
 							</div>
 							<div class="HWCpart3Content">
-								<div class="HWCpart3Contenttext" data-aos="fade right">
+								<div class="HWCpart3Contenttext" >
 									<p>2018北瑞典經歷了260年來最熱的七月，<br>長期乾燥、炎熱的條件之下，<br>七月中出現50處森林野火，其中竟然有不少起火點位在北極圈內，<br>瑞典面對酷熱乾旱天氣，並發生一場當地有史以來最嚴重的山火。<br>當地氣候專家指，這些地區本來不常有山火非常罕見。<br>當局甚至下令禁止部分地區民眾在自家後院烤肉，<br>以免不小心引發火災。<br>就連阿爾卑斯山上的瑞士這回也中鏢。<br>因為天氣實在太乾，養在高山的牛找不到水喝，<br>軍方七月份多次出動直昇機，把湖水運到高山上傾倒，<br>才解除牛群的缺水危機。</p>	
 								</div>
 							</div>
@@ -703,7 +703,7 @@
 						    	<img src="../../webpng/Attackpage/HWCJapan.png" width="100%"  alt=""/> 
 							</div>
 							<div class="HWCpart4Content">
-								<div class="HWCpart4Contenttext" data-aos="fade right">
+								<div class="HWCpart4Contenttext" >
 									<p>日本在2018年七月也迎來東北亞熱浪，<br>除日本外中國東北地區、北韓、韓國等國也遭熱浪襲擊，<br>日本創下許多夏日高溫紀錄，總死亡人數達138人。</p>	
 								</div>
 							</div>
