--- a/網頁/AttackPage/AttackPage.html
+++ b/網頁/AttackPage/AttackPage.html
@@ -668,8 +668,8 @@
 						    	<img src="../../webpng/Attackpage/FRSPGRIT.png" width="100%" alt=""/> 
 							</div>
 
-							<div class="HWCContent">
-								<div class="HWCContenttext" data-aos="fade right">
+							<div class="HWCContenttext">
+								<div class="HWCintroduction" >
 									<p>熱浪是指天氣在一段長時間保持過分炎熱，<br>同時可能伴隨著很高的濕度。<br>這種現象在地球上某些地區特別容易出現，例如地中海氣候區。<br>嚴重的熱浪會造成災難性的農作物歉收，甚至數千人死亡。<br>而在全球暖化造成經常性熱浪侵襲情況下，專家警告在歐洲，<br>夏天艷陽下揮汗如雨的情況將變成一種生活常態。<br>2015-2019，這5年可能是地球史上最熱的5年。<br>甚至比過去前5年大概高出0.2度，更比工業革命前代高出1.1度。<br>報告強調，如果以目前的趨勢繼續下去，那麼到2040年，<br>整個歐洲的熱浪可能會每隔一年便發生一次，<br>總體平均氣溫可能會在2100年前<font color="#ffa642">上升3至5度C</font>。</p>	
 								</div>
 								<div class="HWCWEUContenttext" >
