--- a/網頁/AttackPage/AttackPage.html
+++ b/網頁/AttackPage/AttackPage.html
@@ -676,6 +676,9 @@
 							    	<img src="../../webpng/Attackpage/SWL.png" width="100%"  alt=""/> 
 								</div>
 							</div>
+							<div class="HWCJP">
+						    	<img src="../../webpng/Attackpage/HWCJapan.png" width="100%"  alt=""/> 
+							</div>
 							<div class="HWCContenttext">
 								<div class="HWCintroduction" >
 									<p>熱浪是指天氣在一段長時間保持過分炎熱，<br>同時可能伴隨著很高的濕度。<br>這種現象在地球上某些地區特別容易出現，例如地中海氣候區。<br>嚴重的熱浪會造成災難性的農作物歉收，甚至數千人死亡。<br>而在全球暖化造成經常性熱浪侵襲情況下，專家警告在歐洲，<br>夏天艷陽下揮汗如雨的情況將變成一種生活常態。<br>2015-2019，這5年可能是地球史上最熱的5年。<br>甚至比過去前5年大概高出0.2度，更比工業革命前代高出1.1度。<br>報告強調，如果以目前的趨勢繼續下去，那麼到2040年，<br>整個歐洲的熱浪可能會每隔一年便發生一次，<br>總體平均氣溫可能會在2100年前<font color="#ffa642">上升3至5度C</font>。</p>	
@@ -689,17 +692,10 @@
 								<div class="HWCSWEContenttext" >
 									<p>2018北瑞典經歷了260年來最熱的七月，<br>長期乾燥、炎熱的條件之下，<br>七月中出現50處森林野火，其中竟然有不少起火點位在北極圈內，<br>瑞典面對酷熱乾旱天氣，並發生一場當地有史以來最嚴重的山火。<br>當地氣候專家指，這些地區本來不常有山火非常罕見。<br>當局甚至下令禁止部分地區民眾在自家後院烤肉，<br>以免不小心引發火災。<br>就連阿爾卑斯山上的瑞士這回也中鏢。<br>因為天氣實在太乾，養在高山的牛找不到水喝，<br>軍方七月份多次出動直昇機，把湖水運到高山上傾倒，<br>才解除牛群的缺水危機。</p>	
 								</div>
-							</div>
-
-							<div class="HWCpart4">
-						    	<img src="../../webpng/Attackpage/HWCJapan.png" width="100%"  alt=""/> 
-							</div>
-							<div class="HWCpart4Content">
-								<div class="HWCpart4Contenttext" >
+								<div class="HWCJPContenttext" >
 									<p>日本在2018年七月也迎來東北亞熱浪，<br>除日本外中國東北地區、北韓、韓國等國也遭熱浪襲擊，<br>日本創下許多夏日高溫紀錄，總死亡人數達138人。</p>	
 								</div>
 							</div>
-
 						</div>
 
 						<button class="ExtremeClimate" value="close">
