--- a/網頁/AttackPage/AttackPage.html
+++ b/網頁/AttackPage/AttackPage.html
@@ -1059,9 +1059,7 @@
 	
 	<script src="aos.js"></script>
 	<script>
-		AOS.init({
-		
-		});
+		AOS.init();
 	</script>
 	<script src="pullupcard.js"></script>
 	<script src="littleMenu.js"></script>
