--- a/網頁/AttackPage/AttackPage.html
+++ b/網頁/AttackPage/AttackPage.html
@@ -729,21 +729,18 @@
 								<div class="ECCIconContenttext" >
 										<p>全球暖化造成圍繞在地球上方的<font color="#ffa642">噴射氣流</font>(Jet Stream)的變動，<br>噴射氣流是指圍繞在地球的曲線狀高速氣流帶，<br>主要是依靠北極圈和赤道之間的溫度差，從西向東移動。<br>噴射氣流在移動過程中會把暖空氣往北帶，把冷空氣帶入南方，<br>因此對氣候的形成有著重要影響。<br>當噴射氣流出現<font color="#ffa642">「極端彎曲」</font>，<br>往北的暖空氣會更深入寒冷地帶，往南的冷空氣會更深入溫暖地帶，<br>進而造成我們現在所熟知的「極端氣候」。<br>而隨著地球暖化，大規模的夏季大氣環流，<br>包括噴射氣流與風暴路徑，都出現系統性減弱現象。<br>噴射氣流停滯就意味著當地會持續著相同的氣候，<br>那麼「大晴天就可能變成嚴重的熱浪和乾旱，<br>持續的雨天就會變成洪患」。</p>	
 								</div>
+								<div class="ECCJPContenttext" >
+									<p>日本2018年7月初經歷了幾十年來死亡人數最多的水災，<br>造成超過200人死亡，多處雨量破紀錄，部分地區雨量上千毫米。<br>水災過後不久，又遇上反常的酷熱天氣，<br>多處地區氣溫攀升至超過攝氏40度高溫，<br>東京都內達到40度以上是觀測史上首次，<br>關東甲信地區比常年高出<font color="#ffa642">4.1度</font>等，各地氣溫上升，<br>同期為1961年開始統計以來最熱。</p>	
+								</div>
 							</div>
 							<div class="ECCIcon">
 						    	<img src="../../webpng/Attackpage/Earth.png" width="100%"  alt=""/> 
 							</div>
 
-							<div class="ECCpart1">
+							<div class="ECCJP">
 							    <img src="../../webpng/Attackpage/Japan.png" width="100%"  alt=""/> 
 							</div>
-							<div class="ECCpart1Content">
-								<div class="ECCpart1Contenttext" >
-									<p>日本2018年7月初經歷了幾十年來死亡人數最多的水災，<br>造成超過200人死亡，多處雨量破紀錄，部分地區雨量上千毫米。<br>水災過後不久，又遇上反常的酷熱天氣，<br>多處地區氣溫攀升至超過攝氏40度高溫，<br>東京都內達到40度以上是觀測史上首次，<br>關東甲信地區比常年高出<font color="#ffa642">4.1度</font>等，各地氣溫上升，<br>同期為1961年開始統計以來最熱。</p>	
-								</div>
-								
-							</div>
-
+							
 							<div class="ECCpart2">
 						    	<img src="../../webpng/Attackpage/CN.png" width="100%"  alt=""/> 
 							</div>
