--- a/網頁/AttackPage/AttackPage.html
+++ b/網頁/AttackPage/AttackPage.html
@@ -735,6 +735,9 @@
 								<div class="ECCCNContenttext" >
 									<p>中國2018年7月特別多雨水，<br>包括北京在內等多個城市一度變成澤國，<br>華北、東北、四川、雲南、海南島等地也出現大暴雨，<br>造成交通中斷、人員被困、農田被淹和房屋積水。<br>北京七月中旬在48小時內下了<font color="#ffa642">全年六分之一的雨量</font>，<br>被媒體稱為「全國暴雨中心」當時部分地區風力達10級，<br>雨量高達300毫米。</p>	
 								</div>
+								<div class="ECCAUSContenttext" data-aos="fade right">
+									<p>澳洲2018年7月中先受到冷空氣吹襲，多處溫度跌破零度，<br>東岸一些地區的低溫突破幾十年來的紀錄，<br>甚至消防用的水喉也結冰。<br>這個嚴寒中，澳洲也受到狂風、雷雨影響，<br>維多利亞、塔斯馬尼亞等地錄得每小時120公里的風速。<br>其中，維多利亞當局在一日內收到586宗求助，<br>和180宗建築物損毀報告。</p>	
+								</div>
 							</div>
 							<div class="ECCIcon">
 						    	<img src="../../webpng/Attackpage/Earth.png" width="100%"  alt=""/> 
@@ -748,14 +751,8 @@
 						    	<img src="../../webpng/Attackpage/CN.png" width="100%"  alt=""/> 
 							</div>
 							
-							<div class="ECCpart3">
+							<div class="ECCAUS">
 						    	<img src="../../webpng/Attackpage/Australia.png" width="100%"  alt=""/> 
-							</div>
-							<div class="ECCpart3Content">
-								<div class="ECCpart3Contenttext" data-aos="fade right">
-									<p>澳洲2018年7月中先受到冷空氣吹襲，多處溫度跌破零度，<br>東岸一些地區的低溫突破幾十年來的紀錄，<br>甚至消防用的水喉也結冰。<br>這個嚴寒中，澳洲也受到狂風、雷雨影響，<br>維多利亞、塔斯馬尼亞等地錄得每小時120公里的風速。<br>其中，維多利亞當局在一日內收到586宗求助，<br>和180宗建築物損毀報告。</p>	
-								</div>
-								
 							</div>
 
 							<div class="ECCpart4">
