--- a/網頁/AttackPage/AttackPage.html
+++ b/網頁/AttackPage/AttackPage.html
@@ -738,6 +738,9 @@
 								<div class="ECCAUSContenttext" >
 									<p>澳洲2018年7月中先受到冷空氣吹襲，多處溫度跌破零度，<br>東岸一些地區的低溫突破幾十年來的紀錄，<br>甚至消防用的水喉也結冰。<br>這個嚴寒中，澳洲也受到狂風、雷雨影響，<br>維多利亞、塔斯馬尼亞等地錄得每小時120公里的風速。<br>其中，維多利亞當局在一日內收到586宗求助，<br>和180宗建築物損毀報告。</p>	
 								</div>
+								<div class="ECCTWContenttext" data-aos="fade right">
+									<p>2009年的莫拉克颱風為排名第一的極端強降雨颱風，<br>其24小時至48小時累積降雨接近世界降雨紀錄，<br>降雨量最高記錄為阿里山站，總累積雨量超過<font color="#ffa642">3,000mm</font>，<br>已超過我國一年平均降雨量。<br>此長延時強降雨事件造成我國南部重大傷亡及損失，<br>其傷亡總數達<font color="#ffa642">2,258人</font>、搶救災民達63,625人，<br>農損逾195億元、總經濟損失達<font color="#ffa642">2,000億元</font>，<br>為我國歷史上影響範圍最大、損失最鉅大的極端強降雨颱風。</p>	
+								</div>
 							</div>
 							<div class="ECCIcon">
 						    	<img src="../../webpng/Attackpage/Earth.png" width="100%"  alt=""/> 
@@ -755,15 +758,10 @@
 						    	<img src="../../webpng/Attackpage/Australia.png" width="100%"  alt=""/> 
 							</div>
 
-							<div class="ECCpart4">
+							<div class="ECCTW">
 						    	<img src="../../webpng/Attackpage/TW.png" width="100%"  alt=""/> 
 							</div>
-							<div class="ECCpart4Content">
-								<div class="ECCpart4Contenttext" data-aos="fade right">
-									<p>2009年的莫拉克颱風為排名第一的極端強降雨颱風，<br>其24小時至48小時累積降雨接近世界降雨紀錄，<br>降雨量最高記錄為阿里山站，總累積雨量超過<font color="#ffa642">3,000mm</font>，<br>已超過我國一年平均降雨量。<br>此長延時強降雨事件造成我國南部重大傷亡及損失，<br>其傷亡總數達<font color="#ffa642">2,258人</font>、搶救災民達63,625人，<br>農損逾195億元、總經濟損失達<font color="#ffa642">2,000億元</font>，<br>為我國歷史上影響範圍最大、損失最鉅大的極端強降雨颱風。</p>	
-								</div>
-								
-							</div>
+							
 					  	  	<div class="ECCpart5">
 							  	<img src="../../webpng/Attackpage/USA.png" width="100%"  alt=""/>
 								<div class="ECCAlaska">
