--- a/網頁/AttackPage/AttackPage.html
+++ b/網頁/AttackPage/AttackPage.html
@@ -741,6 +741,9 @@
 								<div class="ECCTWContenttext" >
 									<p>2009年的莫拉克颱風為排名第一的極端強降雨颱風，<br>其24小時至48小時累積降雨接近世界降雨紀錄，<br>降雨量最高記錄為阿里山站，總累積雨量超過<font color="#ffa642">3,000mm</font>，<br>已超過我國一年平均降雨量。<br>此長延時強降雨事件造成我國南部重大傷亡及損失，<br>其傷亡總數達<font color="#ffa642">2,258人</font>、搶救災民達63,625人，<br>農損逾195億元、總經濟損失達<font color="#ffa642">2,000億元</font>，<br>為我國歷史上影響範圍最大、損失最鉅大的極端強降雨颱風。</p>	
 								</div>
+								<div class="ECCUSAContenttext" >
+									<p>2013年11月到2014年1月，<br>北美洲與歐洲上空的「噴射氣流」（jet stream）<br>呈現劇烈起伏且固定的形態。<br>這股在高空向東流竄全球的風，比往常更往南，並越過美國東部，<br>使盤旋北極上空的知名寒流<font color="#ffa642">「極地渦旋」</font>（polar vortex）<br>得以長驅南進，令美東2/3的州深陷冰雪，<br>五大湖的結冰範圍達史上第二，<br>還有兩場凶猛的暴風雪癱瘓了亞特蘭大市好幾天。<br>在此同時，加州上空則有頑強的高壓脊（ridge）壓境，<br>帶來史上最暖的冬天。<br>暖洋洋的冬天乍聽不賴，<br>但隨後而來的是從1800年代晚期以來最嚴重的乾旱，<br>造成數十億美元的農業損失。</p>	
+								</div>
 							</div>
 							<div class="ECCIcon">
 						    	<img src="../../webpng/Attackpage/Earth.png" width="100%"  alt=""/> 
@@ -762,17 +765,11 @@
 						    	<img src="../../webpng/Attackpage/TW.png" width="100%"  alt=""/> 
 							</div>
 							
-					  	  	<div class="ECCpart5">
+					  	  	<div class="ECCUSA">
 							  	<img src="../../webpng/Attackpage/USA.png" width="100%"  alt=""/>
 								<div class="ECCAlaska">
 							  		<img src="../../webpng/Attackpage/Alaska.png" width="100%"  alt=""/> 
 							  	</div>
-							</div>
-						  	<div class="ECCpart5Content">
-								<div class="ECCpart5Contenttext" data-aos="fade right">
-									<p>2013年11月到2014年1月，<br>北美洲與歐洲上空的「噴射氣流」（jet stream）<br>呈現劇烈起伏且固定的形態。<br>這股在高空向東流竄全球的風，比往常更往南，並越過美國東部，<br>使盤旋北極上空的知名寒流<font color="#ffa642">「極地渦旋」</font>（polar vortex）<br>得以長驅南進，令美東2/3的州深陷冰雪，<br>五大湖的結冰範圍達史上第二，<br>還有兩場凶猛的暴風雪癱瘓了亞特蘭大市好幾天。<br>在此同時，加州上空則有頑強的高壓脊（ridge）壓境，<br>帶來史上最暖的冬天。<br>暖洋洋的冬天乍聽不賴，<br>但隨後而來的是從1800年代晚期以來最嚴重的乾旱，<br>造成數十億美元的農業損失。</p>	
-								</div>
-								
 							</div>
 						</div>
 						<button class="Disease" value="close">
