--- a/網頁/AttackPage/AttackPage.html
+++ b/網頁/AttackPage/AttackPage.html
@@ -24,14 +24,11 @@
 		<div class="section">
 			<div class="LoadingAnimate">
 				<div class="loadingwrap">
-					<div class="circle"> </div>
-					<div class="circle"> </div>
-					<div class="circle"> </div>
-					<div class="shadow"> </div>
-					<div class="shadow"> </div>
-					<div class="shadow"> </div>
+					<div class="l-earth">
+						<img src="../../Animation/LoadingEarth.gif" width="100%"  alt=""/>
+					</div>
 					<div class="l-word">						
-						<div class="CountTo100"></div>				
+		  				<div class="CountTo100"></div>				
 					</div>
     			</div>
 			</div>
