--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<div class="LoadingAnimate">
 				<div class="loadingwrap">
 					<div class="l-earth">
-						<img src="../../Animation/LoadingEarth.gif" width="100%"  alt=""/>
+						<img src="/Animation/LoadingEarth.gif" width="100%"  alt=""/>
 					</div>
 					<div class="l-word">						
 						<div class="CountTo100"></div>				
