--- a/網頁/AttackPage/AttackPage.html
+++ b/網頁/AttackPage/AttackPage.html
@@ -366,7 +366,7 @@
 					<div class="Bar100000value-Mobile" data-aos="fade-up" data-aos-once="true" data-aos-duration="2000">
 						<p>&gt;100,000ppm (&gt;10%)</p>
 					</div>
-					<p>可能會導致嚴重缺氧<br>造成永久性腦損傷、昏迷、甚至死亡</p>
+					<p>可能會導致嚴重缺氧<br>造成永久性腦損傷、<br>昏迷、甚至死亡</p>
 				</div>
 				
 			</div>
