--- a/網頁/AttackPage/AttackPage.html
+++ b/網頁/AttackPage/AttackPage.html
@@ -967,7 +967,7 @@
 					<h1>工業革命至今帶來的災難</h1>
 				</div>
 				
-				<div class="Steam">
+				<div class="Steam-Mobile">
 					<img src="../../Animation/wheel.gif" width="100%"  alt=""/> 
 				</div>
 
