--- a/網頁/AttackPage/AttackPage.html
+++ b/網頁/AttackPage/AttackPage.html
@@ -1047,6 +1047,9 @@
 			<div class="bg4">
 				<img src="../../webpng/Attackpage/Part4BG.png" width="100%" alt=""/> 
 			</div>
+			<div class="bg4-1Mobile">
+				<img src="../../webpng/Attackpage/Part4BG.png" width="100%" alt=""/> 
+			</div>
 			<div class="bg5">
 				<img src="../../webpng/Attackpage/Part5BG.png" width="100%" alt=""/>
 			</div>
