Disaster mobile fix

--- a/網頁/AttackPage/AttackPage.html
+++ b/網頁/AttackPage/AttackPage.html
@@ -963,7 +963,7 @@
 		<div class="section">
 			<div class="view4-Mobile" >
 				
-				<div class="Disaster" >
+				<div class="Disaster-Mobile" >
 					<h1>工業革命至今帶來的災難</h1>
 				</div>
 				
